# mgmcc

./: .gitignore  CMakeLists.txt  README.md
results/: plot_performance.py
src/: main.cpp
src/algorithms/: Generator.ixx  GraphAlgo.ixx
src/core/: AlgorithmDecorator.ixx  AlgorithmResult.ixx  GraphConcepts.ixx  GraphPropertySelector.ixx  ImplementedGraph.ixx  Properties.ixx  StrategySelector.ixx
src/factories/: DecoratorFactory.ixx  GraphFactory.ixx  GraphProcessorAlgorithmStrategyFactory.ixx  StrategyProvider.ixx
src/impl/: GraphAMatrix.ixx  GraphFList.ixx  GraphNList.ixx  Profiler.ixx  SpanView.ixx
src/interfaces/: IAlgorithm.ixx  IGraph.ixx
tests/: CMakeLists.txt  DiameterTests.cpp  FeedbackArcSetTests.cpp  SourcevertexTests.cpp  UniversalSourceTests.cpp
